Ajout du footer

--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
         <p>
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facilis aspernatur error earum similique consectetur nam reprehenderit voluptate nihil, culpa minima ducimus ratione quibusdam. Tenetur quas modi similique optio beatae culpa.
         </p>
+        <footer>
+            <p>Mon footer</p>
+        </footer>
     </body>
 </html>
